# omnicat

./: .clang-format  .gitignore  .lvimrc  Build.props  ChangeLog  Makefile.am  configure.ac  omnicat.sln
common/: common.vcxitems  header.h
m4/: ax_define_sub_path.m4
omnicat/: IoService.cpp  IoService.h  Makefile.am  log.cpp  log.h  main.cpp  omnicat.vcxproj  omnicat.vcxproj.filters
omnicat-test/: omnicat-test.cpp  omnicat-test.vcxproj  omnicat-test.vcxproj.filters
omniengine/: AsyncCall.cpp  AsyncCall.h  Class.h  Encoding.cpp  Encoding.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityPipeline.cpp  EntityPipeline.h  ErrorCode.h  Exception.cpp  Exception.h  Factory.h  Instance.cpp  Instance.h  InstancePipeline.cpp  InstancePipeline.h  InstanceResolver.cpp  InstanceResolver.h  Key.h  Makefile.am  Module.h  Parser.cpp  Parser.h  ParserHelper.h  ParserSupport.cpp  ParserSupport.h  Registry.cpp  Registry.h  Resolver.cpp  Resolver.h  Symbol.h  SymbolTable.h  Weave.cpp  Weave.h  WeaverAdapterAsio.cpp  WeaverAdapterAsio.h  WeaverException.cpp  (+9 more)
omnifiber/: Coroutine.cpp  Coroutine.h  Event.cpp  Event.h  Fiber.cpp  Fiber.h  Manager.cpp  Manager.h  omnifiber.vcxproj  omnifiber.vcxproj.filters
omnimodule-base/: ClassTcpConnector.cpp  ClassTcpConnector.h  ClassTcpListener.cpp  ClassTcpListener.h  EntityAcceptor.cpp  EntityAcceptor.h  EntityFileRecvSend.cpp  EntityFileRecvSend.h  EntityTcpConnection.cpp  EntityTcpConnection.h  EntityTcpConnector.cpp  EntityTcpConnector.h  EntityTcpListener.cpp  EntityTcpListener.h  EntityTcpResolver.cpp  EntityTcpResolver.h  FactoryTcpConnector.cpp  FactoryTcpConnector.h  FactoryTcpListener.cpp  FactoryTcpListener.h  FactoryTcpResolver.cpp  FactoryTcpResolver.h  InstanceAcceptor.cpp  InstanceAcceptor.h  InstanceTcpConnection.cpp  InstanceTcpConnection.h  InstanceTcpListener.cpp  InstanceTcpListener.h  InstanceTcpResolver.cpp  InstanceTcpResolver.h  Makefile.am  Module.cpp  OPTIONS-LISTENER.README  OptionsFileDescriptor.cpp  OptionsFileDescriptor.h  OptionsListener.h  OptionsResolver.h  OptionsSocketListener.cpp  OptionsSocketListener.h  OptionsTcpConnection.h  (+6 more)
omniparser/: Makefile.am  dllmain.cpp  omniparser.vcxproj
