bin_PROGRAMS=omnicat

omnicat_SOURCES=main.cpp IoService.cpp

AM_CFLAGS = -DBOOST_ALL_DYN_LINK $(PTHREAD_CFLAGS) $(BOOST_CPPFLAGS)
AM_CPPFLAGS = -DBOOST_ALL_DYN_LINK $(PTHREAD_CFLAGS) $(BOOST_CPPFLAGS)

omnicat_LDADD = ../omniengine/libomniengine.la $(PTHREAD_LIBS) $(BOOST_LDFLAGS) $(BOOST_LOG_LIB) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_THREAD_LIB)

CLEANFILES = *.bin.lo *.bin.o
