pkglib_LTLIBRARIES = omnimodule-base.la

AM_CFLAGS = $(CFLAG_VISIBILITY)
AM_CPPFLAGS = $(CFLAG_VISIBILITY)
AM_LDFLAGS = -module -avoid-version -shared

omnimodule_base_la_SOURCES = FactoryTcpConnector.cpp FactoryTcpListener.cpp EntityAcceptor.cpp EntityFileRecvSend.cpp EntityTcpConnector.cpp InstanceAcceptor.cpp Module.cpp
